--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
     "express": "^4.19.2",
     "heic-convert": "^2.1.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.4",
     "sharp": "^0.33.4"
   }
 }
